# gogpx

./: AGENTS.md  README.md  pyproject.toml
ci/: bandit.yaml  local_ci.sh  run_tests.sh  setup.sh
data/.cache/: geocode_0a1c1e9efabbdeb373c0413909e3ef55ee4eb004.json  geocode_22c7581631f871b7abfad384b2120dd9f4be5952.json  geocode_59e8f9e394f4b0293352846cca4047e427283d02.json  geocode_b9d331fb6ef08d337105390f4cd969b30e48f55b.json  geocode_c210cd3350ca7255296c3162d4fc609813c69f3a.json  geocode_df557a9b3633dbbccc8273f784d5e0c73fefcd1f.json  geocode_ed77e891db4ada9018e7f90e6c1b1d2adbc537a0.json
data/gavers/: gavers.expected.geojson  gavers.expected.gpx  gavers.geojson  gavers.gpx
data/kluisbos/: kluisbos.gpx  kluisbos_debug.json  kluisbos_out.gpx  kluisbos_raw.gpx  kluisbos_selected.json
data/mullertahl/: mullertahl-route-2.gpx
docs/: implementation-plan.md
gogpx/: __init__.py  agent.py  cli.py  config.py  console.py  geo.py  geocode.py  gpx.py  graphhopper.py  metrics.py  pipeline.py  selection.py  vision.py
gogpx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: compare_gpx.py  route_from_image.py
tests/: test_kluisbos_integration.py  test_metrics.py
